[gd_scene load_steps=6 format=3 uid="uid://c1xgosjtjf1n3"]

[ext_resource type="Script" uid="uid://dymjmy2fsjnls" path="res://scenes/shop/shop_artifact.gd" id="1_oba1r"]
[ext_resource type="Texture2D" uid="uid://dm5conpiemvp2" path="res://assets/icons/items/32x32sale_tag.png" id="2_wrpmr"]
[ext_resource type="Texture2D" uid="uid://gfiw0f4ic4r0" path="res://assets/icons/artifacts/24x24Shield.png" id="3_oba1r"]
[ext_resource type="Material" uid="uid://b63ad8bo2t73d" path="res://assets/shaders/outline_material.tres" id="3_wrpmr"]
[ext_resource type="Texture2D" uid="uid://8dorcsr83rfq" path="res://assets/icons/gold.png" id="4_fa1dj"]

[node name="ShopArtifact" type="Control"]
custom_minimum_size = Vector2(32, 54)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 54.0
script = ExtResource("1_oba1r")

[node name="SaleTag" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 22.0
offset_right = 32.0
offset_bottom = 54.0
mouse_filter = 2
texture = ExtResource("2_wrpmr")
stretch_mode = 5

[node name="ArtifactContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 46)
layout_mode = 0
offset_right = 32.0
offset_bottom = 46.0
theme_override_constants/separation = 3

[node name="ArtifactIconButton" type="TextureButton" parent="ArtifactContainer"]
unique_name_in_owner = true
material = ExtResource("3_wrpmr")
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture_normal = ExtResource("3_oba1r")
texture_disabled = ExtResource("3_oba1r")
stretch_mode = 5

[node name="CostContainer" type="HBoxContainer" parent="ArtifactContainer"]
custom_minimum_size = Vector2(32, 10)
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="GoldIcon" type="TextureRect" parent="ArtifactContainer/CostContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("4_fa1dj")
expand_mode = 1
stretch_mode = 5

[node name="GoldCost" type="Label" parent="ArtifactContainer/CostContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "999"
horizontal_alignment = 2
